--- a/css/styles.css
+++ b/css/styles.css
@@ -8035,7 +8035,7 @@ textarea.form-control-lg {
 /* rtl:end:remove */
 .text-primary {
   --bs-text-opacity: 1;
-  color: rgba(var(--bs-primary-rgb), var(--bs-text-opacity)) !important;
+  color: #dfcea3 !important;
 }
 
 .text-secondary {
