--- a/css/style2.css
+++ b/css/style2.css
@@ -31,6 +31,19 @@
   font-family: var(--body-font);
 }
 
+
+.lazy-bg {
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  
+  /* Optionnel : Placeholder léger */
+  background-color: #f0f0f0; 
+  /* Ou un SVG miniature (~1KB) */
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100"><rect width="100" height="100" fill="%23f0f0f0"/></svg>');
+}
+
 /*=============== ANIMATION AU SCROLL ===============*/
 
 /* Classe d'animation factorisée */
@@ -284,9 +297,9 @@ a {
   margin-top: 80px;
   height: 450px;
 }
-.slogan{
+/* .slogan{
   background-image: url(../assets/img/slogan.jpg);
-}
+} */
 .text-slogan{
   background-color: rgba(48, 47, 47, 0.276);  
 }
@@ -945,7 +958,6 @@ footer, footer a{
 }
 
 .contact-form {
-  background-image: url(../assets/img/contact.png);
   background-size: cover;
   background-position: top center;
   background-repeat: no-repeat;
