--- a/css/style2.css
+++ b/css/style2.css
@@ -85,6 +85,18 @@ a {
   text-decoration: none;
 }
 
+header ul a {
+  text-decoration: none;
+}
+header ul a:hover {
+  text-decoration: none;
+  color: #046307;
+}
+a:active {
+  text-decoration: none;
+  color: #046307;
+}
+
 .bienvenu{
   padding: 10px ;
   background: #1B1B3A;
